--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,39 @@
-{
-  "compilerOptions": {
-    "baseUrl": "src",
-    "inlineSourceMap": true,
-    "inlineSources": true,
-    "module": "ESNext",
-    "target": "ES6",
-    "allowJs": true,
-    "noImplicitAny": true,
-    "moduleResolution": "node",
-    "importHelpers": true,
-    "isolatedModules": true,
-    "strictNullChecks": true,
-    "lib": [
-      "DOM",
-      "dom.iterable",
-      "ES5",
-      "ES6",
-      "ES7"
+LOCAL_PATH = os.getenv("LOCAL_PATH", default='.')
+NAMESPACE = os.getenv("NAMESPACE", default='test-ns')
+update_settings( max_parallel_updates = 3 , k8s_upsert_timeout_secs = 500 , suppress_unused_image_warnings = None )
+
+local_resource(
+  name="build-java",
+  cmd="~/.mvn/bin/mvn install -DskipTests",
+  deps=["pom.xml", "src"],
+)
+
+k8s_custom_deploy(
+    'python-it',
+    apply_cmd="python3 ./tiltpython.py",
+    delete_cmd="kubectl delete -f ./pipelinerun.yaml",
+    deps=['pom.xml'],
+    container_selector='workload-knative-tilt',
+    live_update=[
+        sync('./src5', '/workspace/source'),
+        sync('./target/classes', '/workspace/source/BOOT-INF/classes'),
     ]
-  },
-  "include": [
-    "**/*.ts"
-  ]
-}
+)
+
+
+
+
+k8s_resource(
+    'python-it',
+    port_forwards=["8080:8080"],
+    trigger_mode=TRIGGER_MODE_MANUAL,
+)
+
+
+allow_k8s_contexts('k8s-dev-nat-iterate-cluster')
+ 
+
+
+
+
+
