--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,39 +1,1 @@
-LOCAL_PATH = os.getenv("LOCAL_PATH", default='.')
-NAMESPACE = os.getenv("NAMESPACE", default='test-ns')
-update_settings( max_parallel_updates = 3 , k8s_upsert_timeout_secs = 500 , suppress_unused_image_warnings = None )
-
-local_resource(
-  name="build-java",
-  cmd="~/.mvn/bin/mvn install -DskipTests",
-  deps=["pom.xml", "src"],
-)
-
-k8s_custom_deploy(
-    'python-it',
-    apply_cmd="python3 ./tiltpython.py",
-    delete_cmd="kubectl delete -f ./pipelinerun.yaml",
-    deps=['pom.xml'],
-    container_selector='workload-knative-tilt',
-    live_update=[
-        sync('./src5', '/workspace/source'),
-        sync('./target/classes', '/workspace/source/BOOT-INF/classes'),
-    ]
-)
-
-
-
-
-k8s_resource(
-    'python-it',
-    port_forwards=["8080:8080"],
-    trigger_mode=TRIGGER_MODE_MANUAL,
-)
-
-
-allow_k8s_contexts('k8s-dev-nat-iterate-cluster')
- 
-
-
-
-
-
+LiveUpdate "python-it:k8s_custom_deploy:python-it" UpdateStopped: Found file(s) not matching any sync (files: [src/main/java/com/example/springboot/HelloController.java])
